--- a/src/BookStore.App/wwwroot/index.html
+++ b/src/BookStore.App/wwwroot/index.html
@@ -9,6 +9,10 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BookStore.App.styles.css" rel="stylesheet" />
+
+    <script src="https://kit.fontawesome.com/273d0585ea.js" crossorigin="anonymous"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
